# quxer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  large.txt  parser.c  parser.h  peg.txt
include/peg/: ast.h  parser.h  pegspec.h
include/templates/: alternative.h  and.h  literal.h  maps.h  nonterminal.h  not.h  optional.h  plus.h  range.h  rule.h  semantic.h  sequence.h  star.h  templates.h
include/utils/: grammar.h  ptree.h  writer.h
lib/include/: arena.h  deque.h  dyn_arr.h  internal.h  ptype.h
lib/src/: arena.c  deque.c  internal.c
shared/include/: arena.h  internal.h  ptype.h
shared/src/: arena.c  dyn_arr.c  internal.c
src/: main.c
src/peg/: ast.c  parser.c  pegspec.c
src/templates/: alternative.c  and.c  literal.c  maps.c  nonterminal.c  not.c  optional.c  plus.c  range.c  rule.c  semantic.c  sequence.c  star.c  templates.c
src/utils/: grammar.c  ptree.c  writer.c
